# auroraview-pack

./: .gitignore  Cargo.toml  README.md
src/: bundle.rs  common.rs  config.rs  deps_collector.rs  downloader.rs  error.rs  icon.rs  lib.rs  license.rs  manifest.rs  metrics.rs  overlay.rs  packer.rs  progress.rs  protection.rs  pyoxidizer.rs  python_standalone.rs  resource_editor.rs
tests/: bundle_tests.rs  config_tests.rs  deps_collector_tests.rs  generator_tests.rs  lib_tests.rs  license_tests.rs  manifest_tests.rs  metrics_tests.rs  overlay_tests.rs  packer_tests.rs  pyoxidizer_tests.rs  python_standalone_tests.rs
