[package]
name = "auroraview-pack"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
authors = ["Hal Long <hal.long@outlook.com>"]
license = "MIT"
repository = "https://github.com/loonghao/auroraview-pack"
description = "Zero-dependency application packaging for WebView apps"
keywords = ["webview", "packaging", "bundler", "rust", "python"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[lib]
name = "auroraview_pack"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Progress bars and spinners
indicatif = "0.17"
console = "0.15"

# File system operations
walkdir = "2.5"
glob = "0.3"

# Compression
zstd = "0.13"
flate2 = "1.0"

# Archive format
tar = "0.4"

# Zip archive
zip = { version = "4", default-features = false, features = ["deflate"] }

# HTTP client for downloads
ureq = "2.10"

# URL parsing
url = "2.5"

# SHA hashing for checksums
sha2 = "0.10"

# System directories
dirs = "6.0"

# Machine ID
hostname = "0.4"

# Parallel processing
rayon = "1.10"

# Content hashing (for cache key generation)
blake3 = "1.5"

# Temp files
tempfile = "3.20"

# Base64 encoding (for bytecode)
base64 = "0.22"

# Random number generation
rand = "0.8"

# Image processing (for icon conversion)
image = "0.25"

# ICO file format
ico = "0.5"

# Code protection (optional) - uses sibling submodule
auroraview-protect = { path = "../auroraview-protect", optional = true }

[features]
default = []
# Enable Python code protection
code-protection = ["auroraview-protect"]

[dev-dependencies]
# Testing utilities
tempfile = "3.20"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
